added trimming and PCR duplicate removal steps